--- a/openlayers-default.html
+++ b/openlayers-default.html
@@ -131,7 +131,7 @@ body {
 <div id="map"></div>
 
 <div id="popup" class="ol-popup">
-	<a href="javascript:close_popup()" id="popup-closer" class="ol-popup-closer">✖</a>
+	<a href="javascript://close_popup()" id="popup-closer" class="ol-popup-closer">✖</a>
 	<div id="popup-content"></div>
 </div>
 
